--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 <body>
     <div class="container">
         <div class="answer">
-            <p>3</p>
+            <div class="inner">
+                <p>3</p>
+            </div>
         </div>
         <div class="calculator">
             
             <button class="clr">CLEAR</button>
-            <button>+/-</button>
-            <button class="operator">%</button>
+            <button class="invert">+/-</button>
+            <button class="percent">%</button>
             <button class="operator">/</button>
 
             <button class="number">7</button>
